2007-08-03  Inge Wallin  <inge@lysator.liu.se>

	Change lng-> lon according to the coding standards.
	* src/lib/AbstractScanlineTextureMapper.cpp,
	* src/lib/AbstractScanlineTextureMapper.h,
	* src/lib/FlatScanlineTextureMapper.cpp,
	* src/lib/FlatScanlineTextureMapper.h,
	* src/lib/GlobeScanlineTextureMapper.cpp,
	* src/lib/GlobeScanlineTextureMapper.h,
	* src/lib/GridMap.cpp,
	* src/lib/GridMap.h,
	* src/lib/MarbleWidget.cpp,
	* src/lib/MarbleWidget.h,
	* src/lib/measuretool.cpp,
	* src/lib/measuretool.h,
	* src/lib/TileLoader.cpp:
	Change all lng -> lon

	Reduce visibility of internal classes.
	* src/lib/ViewParams.h (class ViewParams): Don't export this class
	* src/lib/MarbleModel.{h,cpp}: Move #include of maptheme.h from .h
	to .cpp
	* src/lib/maptheme.h (class ViewParams): Don't export this class
	
 	Remove storage of half of image width/height
	* src/lib/GridMap.cpp: Remove storage of half of image width/heigh.

	Cleaning and remove storage of half of image width/height
	* src/lib/AbstractScanlineTextureMapper.{h,cpp}, 
	* src/lib/FlatScanlineTextureMapper.cpp,
	* src/lib/GlobeScanlineTextureMapper.cpp: Cleaning

2007-08-02  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/MarbleModel.cpp: General cleaning.

2007-08-01  Murad Tagirov  <tmurad@gmail.com>

    Added methods to support kml subfolders
    * src/lib/kml/KMLFolder.{h,cpp}

2007-07-31  Inge Wallin  <inge@lysator.liu.se>

	Make kdemain and qtmain more alike.
	* src/kdemain.cpp (main): Add same setAttribute as in qtmain.cpp

	More krazy issue 14: inline methods in public classes
	* src/lib/placemarkpainter.h (drawLabelText): not inline
	* src/lib/placemark.h (population): not inline
	* src/lib/xmlhandler.h (popidx): not inline
	(seleced): not inline

	Make it easier to change test setup.
	* src/MarbleTest.cpp (timeDemo): More logical setup

	Fix krazy issue 14: inline methods in public classes
	* src/lib/GridMap.{h,cpp} (initCrossHorizon): Remove function and